# rust-api

./: .gitmodules  Cargo.toml  README.md  build.rs
.github/workflows/: push.yaml  tag_publish.yaml
src/: lib.rs
src/aruna/: aruna.api.bundler.services.v1.rs  aruna.api.dataproxy.services.v2.rs  aruna.api.health.v2.rs  aruna.api.hooks.services.v1.rs  aruna.api.hooks.services.v2.rs  aruna.api.internal.v1.rs  aruna.api.notification.services.v1.rs  aruna.api.notification.services.v2.rs  aruna.api.storage.models.v1.rs  aruna.api.storage.models.v2.rs  aruna.api.storage.services.v1.rs  aruna.api.storage.services.v2.rs  google.api.rs  grpc.gateway.protoc_gen_openapiv2.options.rs  implements.rs  mod.rs
src/aruna_no_transport/: aruna.api.bundler.services.v1.rs  aruna.api.dataproxy.services.v2.rs  aruna.api.health.v2.rs  aruna.api.hooks.services.v1.rs  aruna.api.hooks.services.v2.rs  aruna.api.internal.v1.rs  aruna.api.notification.services.v1.rs  aruna.api.notification.services.v2.rs  aruna.api.storage.models.v1.rs  aruna.api.storage.models.v2.rs  aruna.api.storage.services.v1.rs  aruna.api.storage.services.v2.rs  google.api.rs  grpc.gateway.protoc_gen_openapiv2.options.rs  mod.rs
src/sciobjectsdb/: grpc.gateway.protoc_gen_openapiv2.options.rs  mod.rs  sciobjsdb.api.notification.services.v1.rs  sciobjsdb.api.storage.models.v1.rs  sciobjsdb.api.storage.services.v1.rs
src/sciobjectsdbapi/: api.models.v1.rs  api.services.v1.rs  grpc.gateway.protoc_gen_openapiv2.options.rs  grpc.gateway.protoc_gen_swagger.options.rs  models.rs  services.rs
src/v2/: mod.rs
src/v2/aruna/: aruna.api.dataproxy.services.v2.rs  aruna.api.health.v2.rs  aruna.api.hooks.services.v2.rs  aruna.api.notification.services.v2.rs  aruna.api.storage.services.v2.rs  google.api.rs
src/v2/aruna_no_transport/: aruna.api.dataproxy.services.v2.rs  aruna.api.health.v2.rs  aruna.api.hooks.services.v2.rs  aruna.api.notification.services.v2.rs  aruna.api.storage.models.v2.rs  aruna.api.storage.services.v2.rs  google.api.rs  grpc.gateway.protoc_gen_openapiv2.options.rs  mod.rs
src/v3/: aruna.api.v3.rs  mod.rs
