[package]
authors = ["Sebastian <sb@pus.de>", "Marius <mariusdieckmann90@gmail.com>"]
description = "The Rust API build for the Aruna Object Storage (AOS)"
edition = "2021"
license = "Apache-2.0"
name = "aruna-rust-api"
version = "2.0.0-beta.6"
include = ["src"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12.1"
prost-types = "0.12.1"
prost-wkt-types = "0.5.0"
serde = {version="1.0.189", features = ["derive"]}
serde_json = "1.0.107"
tonic = {version="0.10.2", default-features = false, features=["codegen", "prost"]}

[build-dependencies]
tonic-build = "0.10.2"

[features]
default = ["transport"]
transport = ["tonic/transport"]
